--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -16,9 +16,9 @@
                 <h1>Bangtan Boys</h1>
             </div>
             <div class="header-2">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-instagram"></i>
+                <i style="color: #fff"; font-size: 17px;" class="fa-brands fa-facebook"></i>
+                <i style="color: #fff" class="fa-brands fa-youtube"></i>
+                <i style="color: #fff" class="fa-brands fa-instagram"></i>
             </div>
         </div>
         <div class="content">
