--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="footer">
-            <h1>From ARMY with love<i class="fa-solid fa-heart" style="color:red"></i></h1>
+            <h1>From <span style="color: red">ARMY</span> with love<i class="fa-solid fa-heart" style="color:red"></i></h1>
         </div>
     </div>
 </body>
