--- a/Lesson5/index3.html
+++ b/Lesson5/index3.html
@@ -32,9 +32,13 @@
                         <li><a href="">About</a></li>
                         <li><a href="">Timing</a></li>
                         <li><a href="">Courses</a></li>
-                        <input placeholder="Search">
-                        <i class="fa-solid fa-magnifying-glass"></i>    
-                    </input>
+                        <li>
+
+                        <div class="find">
+                            <input placeholder="Search">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </div>
+                    </li>
                     </ul>
                 </div>
             </div>
