--- a/Lesson6/index4.html
+++ b/Lesson6/index4.html
@@ -93,22 +93,22 @@
         <div class="container-portfolio">
             <div class="container-portfolio-picture">
                 <div class="container-portfolio-picture-baby">
-                    <img src="home.jpg">
+                    <img src="https://cdn.britannica.com/38/196638-131-7BF02881/Santa-Claus.jpg">
                 </div>
                 <div class="container-portfolio-picture-baby">
-                    <img src="home.jpg">
+                    <img src="https://cdn.britannica.com/38/196638-131-7BF02881/Santa-Claus.jpg">
                 </div>
                 <div class="container-portfolio-picture-baby">
-                    <img src="home.jpg">
+                    <img src="https://cdn.britannica.com/38/196638-131-7BF02881/Santa-Claus.jpg">
                 </div>
                 <div class="container-portfolio-picture-baby">
-                    <img src="home.jpg">
+                    <img src="https://cdn.britannica.com/38/196638-131-7BF02881/Santa-Claus.jpg">
                 </div>
                 <div class="container-portfolio-picture-baby">
-                    <img src="home.jpg">
+                    <img src="https://cdn.britannica.com/38/196638-131-7BF02881/Santa-Claus.jpg">
                 </div>
                 <div class="container-portfolio-picture-baby">
-                    <img src="home.jpg">
+                    <img src="https://cdn.britannica.com/38/196638-131-7BF02881/Santa-Claus.jpg">
                 </div>
             </div>
             <div class="container-portfolio-main">
